# saed_platform

./: README.md  openapi.json  package-lock.json  package.json  railway.toml  vite.config.js
rabt-backend/: .env.example  .env.sample  .gitignore  Dockerfile  LOCAL-DEVELOPMENT.md  Makefile  README-DEPLOYMENT.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  rabt.db  railway.toml  seed.py  setup_local.sh  start.sh
rabt-backend/alembic/: env.py
rabt-backend/app/: config.py  main.py
rabt-backend/app/api/: dependencies.py
rabt-backend/app/api/v1/: adverts.py  applications.py  auth.py  organizers.py  skills.py  utils.py  volunteers.py
rabt-backend/app/auth/: jwt_handler.py
rabt-backend/app/database/: connection.py  enums.py  models.py
rabt-backend/app/schemas/: advert.py  application.py  organizer.py  skill.py  user.py  volunteer.py
rabt-backend/app/services/: advert_service.py  application_service.py  user_service.py
rabt-backend/app/utils/: file_utils.py  r2_storage.py  s3_storage.py
rabt-backend/tests/: conftest.py
rabt-frontend/: README.md  package-lock.json  package.json  vite.config.js
rabt-frontend/src/: App.jsx
rabt-mobile/: .gitignore  Makefile  README.md  analysis_options.yaml  pubspec.yaml
rabt-mobile/lib/: main.dart
rabt-mobile/test/: widget_test.dart
rabt-mobile/web/: index.html  manifest.json
src/: App.jsx
src/api/: client.js  endpoints.js  index.js  services.js
src/components/: JobDetailsPage.jsx
src/contexts/: AuthContext.jsx  useAuth.js
src/models/: Application.js  Job.js
src/routes/: AppRoutes.jsx
(+162 files in other folders)
